src/main/java/com/example/bank/_core/errors/exception/Exception403.java
package com.example.bank._core.errors.exception;

public class Exception403 extends RuntimeException{

    public Exception403(String msg) {
        super(msg);
    }
}
